He cambiado el titulo de java a HTML

--- a/CarpetaBorrar/EjercicioCompleto/index.html
+++ b/CarpetaBorrar/EjercicioCompleto/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="programar, instalar, constancia">
     <!--Esto te dice el día en el que se creó la página-->
     <meta name="date" content="02/10/2024">
-    <title>Programación en Java</title>
+    <title>Programación en HTLM</title>
     <link rel="icon" href="./Imagenes/Java.ico">
     <link rel="stylesheet" href="./Style/estilos.css">
 </head>
